--- a/Resume.html
+++ b/Resume.html
@@ -19,14 +19,14 @@
             <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Resume.html">Resume</a>
-            <a href="http://medium.com/@johnnyko28">Blog</a>
-            <a href="http://www.amazon.com/">Shop</a>
+            <a href="project.html">Project</a>
+            <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
             <a href="Contact.html">Contact</a>
         </div>
   
         <h2>Resume</h2>
         <p>
-            I am an experienced Product Manager with a demonstrated history of working in the electrical and electronic manufacturing industry. Skilled in Computer Science, IT Strategy, Analytical Skills, Market Research, International Sales, and Management. Strong business development professional with a Master focused in Technology Management from University of Illinois at Urbana-Champaign - College of Business.<br><br> 
+            Programming Languages: C, C++, Java, Python. Databases: SQL, phpMyAdmin, MongoDB. Operating Systems: Linux, macOS, Windows. Web Languages: HTML, CSS, Javascript, Node.js. Before joining USC, I was an experienced Product Manager with a demonstrated history of working in the electrical and electronic manufacturing industry. Skilled in Computer Science, IT Strategy, Market Research, Management, and Business Development. Strong business development professional graduated from University of Illinois at Urbana-Champaign.<br><br> 
             Please feel free to download my resume!
         </p>
   
@@ -34,7 +34,7 @@
         <button class="btn"></i> Download</button>
         </a>
         <div style="border:1px white;max-width:95%;height:400px;overflow:auto">
-            <img alt="A screenshot showing CSS Quick Edit" src="resume.jpg" />
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/resume.png" />
         </div><br>
         
         
