--- a/About.html
+++ b/About.html
@@ -18,8 +18,8 @@
             <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Resume.html">Resume</a>
-            <a href="http://medium.com/@johnnyko28">Blog</a>
-            <a href="http://www.amazon.com/">Shop</a>
+            <a href="project.html">Project</a>
+            <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
             <a href="Contact.html">Contact</a>
         </div>
   
