--- a/Contact.html
+++ b/Contact.html
@@ -20,15 +20,15 @@
             <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Resume.html">Resume</a>
-            <a href="http://medium.com/@johnnyko28">Blog</a>
-            <a href="http://www.amazon.com/">Shop</a>
+            <a href="project.html">Project</a>
+            <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
             <a href="Contact.html">Contact</a>
         </div>
   
         <h2>Contact</h2>
-        <a href="https://www.facebook.com/johnnyko28" class="fa fa-facebook"></a>
-        <a href="https://www.linkedin.com/in/chinchouko/" class="fa fa-linkedin"></a>
-        <a href="https://github.com/johnnyko28" class="fa fa-github"></a>
+        <a href="https://www.facebook.com/johnnyko28"  target="_blank" class="fa fa-facebook"></a>
+        <a href="https://www.linkedin.com/in/chinchouko/"  target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://github.com/johnnyko28"  target="_blank" class="fa fa-github"></a>
         <p>
             If you would like to introduce your company, share your thoughts, please
             send me a message or email. My email is johnnyko28 at gmail.com. I'll do my best to get back to you soon! 
