--- a/project.html
+++ b/project.html
@@ -25,7 +25,18 @@
             <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
             <a href="Contact.html">Contact</a>
         </div>
-  
+        
+        <h2>Mobile Social Game: Fall 2019 </h2>
+        <p>
+            The final project of CSCI-599 Mobile Social Game from University of Southern California Computer Science course.
+            I was the project manager of a seven people team, the game was made with C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br>
+            <a href="https://youtu.be/WllFxTex6Ek" target="_blank">see project demo on Youtube</a><br>
+            <a href="https://github.com/johnnyko28/StrangeRoad/blob/master/Design%20Document.pdf" target="_blank">see design document</a><br>
+            <a href="https://github.com/johnnyko28/StrangeRoad" target="_blank">see source code</a><br>
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/StrangeRoad.png" />
+        </p>
+
+        
         <h2>Full Stack Web Development: Winter 2019 </h2>
         <p>
             Full Stack Web Development Project: Ko & Company.<br>
