--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
         <h2>Experienced Product Manager</h2>
         <p>
-            My name is Johnny Ko, currently a graduate student major in computer science at University of Southern California. I have another master's degree in Technology Management from University of Illinois at Urbana-Champaign - College of Business. I was a product manager in the electronic industry, experience including sales, trading, marketing, procurement, logistic and manufacturing.
+            My name is Johnny Ko, currently a graduate student major in computer science at University of Southern California. I have another master's degree in Technology Management from University of Illinois at Urbana-Champaign - College of Business. I was a product manager in the electronic industry, experienced include sales, trading, marketing, procurement, logistic and manufacturing.
         </p>
         
         <img alt="A screenshot showing CSS Quick Edit" src="screenshots/coffee.jpeg" />
