--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
         <h2>Mobile Social Game: Fall 2019 </h2>
         <p>
             The final project of CSCI-599 Mobile Social Game from University of Southern California Computer Science course.
-            I was the project manager of a seven people team, the game was made with C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br>
+            I was the project manager of a seven people team. The game is a simple mobile social made for all ages using C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br>
             <a href="https://youtu.be/WllFxTex6Ek" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad/blob/master/Design%20Document.pdf" target="_blank">see design document</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad" target="_blank">see source code</a><br>
@@ -42,7 +42,7 @@
             Full Stack Web Development Project: Ko & Company.<br>
             <a href="https://johnnyko.herokuapp.com/" target="_blank">see website</a><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/ko.png" />
-            It is an online shopping website. Use NodeJS to write server-side JavaScript, Express and MongoDB to create full-stack JS applications. I spent one month taking the online course <a href="https://www.udemy.com/the-web-developer-bootcamp" target="_blank">www.udemy.com/the-web-developer-bootcamp</a> and made this new web project. <br>
+            It is an online shopping website that allow users to login, signup, upload products and leave comments. Used NodeJS to write server-side JavaScript, Express and MongoDB to create full-stack JS applications. I spent one month taking the online course <a href="https://www.udemy.com/the-web-developer-bootcamp" target="_blank">www.udemy.com/the-web-developer-bootcamp</a> and made this new web project. <br>
             
             <a href="https://github.com/johnnyko28/Full-Stack-Project-Ko-and-Co." target="_blank">see source code</a><br>
         </p>
@@ -81,7 +81,7 @@
         </p>
 
         <h2>Mobile application prototyping: Spring 2017</h2>
-        <p>The final project of CS352 Introduction to Usability Engineering from Oregon State University Computer Science course. I was the team leader and led a 4 people team to complete it, members from US, Europe & Asia. We made a food delivery mobile app prototype.<br><a href="https://github.com/johnnyko28/Food-delivery-app-prototype" target="_blank">see project</a><br>
+        <p>The final project of CS352 Introduction to Usability Engineering from Oregon State University Computer Science course. I was the team leader and led a 4 people remote team to complete it, members from US, Europe & Asia. We made a food delivery mobile app prototype.<br><a href="https://github.com/johnnyko28/Food-delivery-app-prototype" target="_blank">see project</a><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/food.jpg" />
         </p>
         <h2>Web development: Summer 2012 </h2>
@@ -93,7 +93,7 @@
 
         </p>
         <h2>Technology Practicum project: Summer 2010</h2>
-        <p> Practicum project at University of Illinois at Urbana–Champaign. I led a team of six members to develop a business consulting report, including segmentation analysis and promotional concept prototyping. Our topic is how to promote Wikipidia, working with Wikimedia Fundation in San Francisco Bay Area. 
+        <p> Practicum project (capstone project) at University of Illinois at Urbana–Champaign. I led a team of six members to develop a business consulting report, including segmentation analysis and promotional concept prototyping. Our topic is how to promote Wikipidia, working with Wikimedia Fundation in San Francisco Bay Area. 
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/wiki.jpg" />
         </p>
     </body>
