--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
         <h2>Mobile Social Game: Fall 2019 </h2>
         <p>
             The final project of CSCI-599 Mobile Social Game from University of Southern California Computer Science course.
-            I was the project manager of a seven people team. The game is a simple mobile social made for all ages using C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br>
+            I was the project manager of a seven people team. The game is a simple mobile social made for all ages using C# and Unity. This game project includes not only implementation but also product management, market research, game data analysis and LiveOps. <br>
             <a href="https://youtu.be/WllFxTex6Ek" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad/blob/master/Design%20Document.pdf" target="_blank">see design document</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad" target="_blank">see source code</a><br>
