--- a/project.html
+++ b/project.html
@@ -62,7 +62,6 @@
         <h2>Full Stack Web Development: Spring 2020 </h2>
         <p>
             Full Stack Web Development Project: Google News<br>
-            <a href="http://kochinch.freevar.com/index.html" target="_blank">see website</a><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/NewsApp2.png" />
             This is a webpage that allows you to search for news information using the Google News API and the results will be displayed in card format.<br><br>
 
@@ -70,7 +69,7 @@
             Used Google News API.<br>
             Used a JSON parser in Python.<br>
             Used Flask in Python.<br>
-            Deloyed to AWS, now https://freewha.com<br>
+            Deloyed to AWS<br>
 
             <a href="https://github.com/johnnyko28/Google-News" target="_blank">see source code</a><br>
         </p>
