--- a/Resume.html
+++ b/Resume.html
@@ -34,11 +34,11 @@
             Please feel free to download my resume!
         </p>
   
-        <a href="Chin-Chou_Ko_resume_202006.pdf" download>
+        <a href="Chin-Chou_Ko_resume_202007.pdf" download>
         <button class="btn"></i> Download</button>
         </a>
         <div style="border:1px white;max-width:95%;height:400px;overflow:auto">
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/Chin-Chou_Ko_resume_202005.png" />
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/resume_202007.jpg" />
         </div><br>
         
         
