--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <li>Analysis of Algorithms</li>
             <li>Mobile Social Games</li>
             <li>Web Technologies</li>
+            <li>Advanced Mobile Devices and Game Consoles</li>
+
+
+
         </ul>
     </body>
 </html>
