--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
         <h2>Mobile Game Development: Summer 2020 </h2>
         <p>
             A capstone project of CSCI-526 Advanced Mobile Devices and Game Consoles from University of Southern California Computer Science course.
-            Developed a 3D mobile puzzle game with a 9-person virtual team, the game was made with C# and Unity. <br>
+            Developed a 3D mobile puzzle game with a 9-person virtual team, the game was made with C# and Unity. <br><br>
             <a href="https://csci526-triplea.netlify.app/" target="_blank">play this game on WebGL</a><br>
             <a href="https://youtu.be/-FgaVBdATOo" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity/blob/master/Elementally%20GDD.pdf" target="_blank">see design document</a><br>
@@ -88,7 +88,7 @@
         <p>
             The final project of CSCI-599 Mobile Social Game from University of Southern California Computer Science course.
             I was the project manager of a seven-person team, the game was made with C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br>
-            <a href="http://kochinch.freevar.com/StrangeRoad.html" target="_blank">play this game on WebGL</a><br>
+            <a href="http://kochinch.freevar.com/StrangeRoad.html" target="_blank">play this game on WebGL</a><br><br>
             <a href="https://youtu.be/WllFxTex6Ek" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad/blob/master/Design%20Document.pdf" target="_blank">see design document</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad" target="_blank">see source code</a><br>
