--- a/project.html
+++ b/project.html
@@ -45,7 +45,7 @@
             Language: Java/JSON<br>
             API: Guadian API/Google Trends API/Open Weather API<br>
             Libraries: Picasso/Volley
-            <br>
+            <br><br>
             <a href="https://www.youtube.com/watch?v=IaFrY6Trblc&feature=youtu.be" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/Android-News-App" target="_blank">see source code</a><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/Android_screenshot.png" />
@@ -79,7 +79,7 @@
             Used Google News API.<br>
             Used a JSON parser in Python.<br>
             Used Flask in Python.<br>
-            Deloyed to AWS<br>
+            Deloyed to AWS<br><br>
 
             <a href="https://github.com/johnnyko28/Google-News" target="_blank">see source code</a><br>
         </p>
@@ -87,8 +87,8 @@
         <h2>Mobile Social Game: Fall 2019 </h2>
         <p>
             The final project of CSCI-599 Mobile Social Game from University of Southern California Computer Science course.
-            I was the project manager of a seven-person team, the game was made with C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br>
-            <a href="http://kochinch.freevar.com/StrangeRoad.html" target="_blank">play this game on WebGL</a><br><br>
+            I was the project manager of a seven-person team, the game was made with C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br><br>
+            <a href="http://kochinch.freevar.com/StrangeRoad.html" target="_blank">play this game on WebGL</a><br>
             <a href="https://youtu.be/WllFxTex6Ek" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad/blob/master/Design%20Document.pdf" target="_blank">see design document</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad" target="_blank">see source code</a><br>
@@ -110,7 +110,7 @@
         
         <h2>USC Blockathon IOTA project: Winter 2019 </h2>
         <p>
-            Our project creates a blockchain structure which encapsulates a website and the sub-websites that it can be redirected to. <br><br>Businesses register with the government to prove the legality and authenticity of their website. Following the registration, businesses receive their unique business ID. This governmental business registration guarantees both the legality and security of the website, thereby replacing the need of 3rd party certifications. <br><br>They, then connect their server to IOTA's blockchain by providing it with their business ID and a list of trusted websites users can be redirected to. Only sites on this list can be accessed; users cannot access malicious sites since these are not on the trusted list. <br><br>Using a private blockchain structure, businesses will also need to validate the registration of their site with IOTA using a password. This password will be required every time a new block is added to the chain; others who don't hold the password cannot add to the chain. This will also increase the security of the websites. <br>
+            Our project creates a blockchain structure which encapsulates a website and the sub-websites that it can be redirected to. <br><br>Businesses register with the government to prove the legality and authenticity of their website. Following the registration, businesses receive their unique business ID. This governmental business registration guarantees both the legality and security of the website, thereby replacing the need of 3rd party certifications. <br><br>They, then connect their server to IOTA's blockchain by providing it with their business ID and a list of trusted websites users can be redirected to. Only sites on this list can be accessed; users cannot access malicious sites since these are not on the trusted list. <br><br>Using a private blockchain structure, businesses will also need to validate the registration of their site with IOTA using a password. This password will be required every time a new block is added to the chain; others who don't hold the password cannot add to the chain. This will also increase the security of the websites. <br><br>
             <a href="https://devpost.com/software/team-dietcoke" target="_blank">see project</a><br>
             <a href="https://github.com/johnnyko28/USC-Blockathon-2019-IOTA_project" target="_blank">see source code</a><br>
             <a href="https://medium.com/@johnnyko28/test-31994039273" target="_blank">see blog</a><br>
@@ -122,7 +122,7 @@
         <h2>Database design: Summer 2018 </h2>
         <p>
             The final project of CS340 Introduction to Database from Oregon State University Computer Science course. 
-            I designed a database representing an online shopping/e-commerce system. I chose this topic is because of my business education background and work experience in business. I am always trying to do something entrepreneurial and I think this project is a good start to combine the knowledge of business and computer science.This project contains many aspects, from clients to products, also some details about the shopping carts and manufacturers. <br>
+            I designed a database representing an online shopping/e-commerce system. I chose this topic is because of my business education background and work experience in business. I am always trying to do something entrepreneurial and I think this project is a good start to combine the knowledge of business and computer science.This project contains many aspects, from clients to products, also some details about the shopping carts and manufacturers. <br><br>
             <a href="database.html" target="_blank">see project</a><br>
             <a href="https://github.com/johnnyko28/Database_project" target="_blank">see source code</a><br>
         </p>
@@ -146,7 +146,7 @@
         <h2>Web development: Summer 2012 </h2>
         <p>
             I created a commercial website for company in Adobe Dreamweaver in 2012. It was my side-project for my previous company. At the time 2012, I didn't know too much about HTML/CSS/Javascript. I used the dreamweaver software to make it, modified by some free templates. I was an product manger/international sales representative in the electronics industry.
-            <br>  <a href="http://singreat.com/" target="_blank">see project</a><br>
+            <br><br>  <a href="http://singreat.com/" target="_blank">see project</a><br>
             <a href="https://github.com/johnnyko28/Website-project-2012" target="_blank">see source code</a><br>
              <img alt="A screenshot showing CSS Quick Edit" src="screenshots/singreat.jpg" />
 
