--- a/project.html
+++ b/project.html
@@ -72,8 +72,8 @@
         <h2>Full Stack Web Development: Spring 2020 </h2>
         <p>
             Full Stack Web Development Project: Google News<br>
+            <a href="https://google-news-johnnyko.herokuapp.com/" target="_blank">see website</a><br>
             <a href="https://github.com/johnnyko28/Google-News" target="_blank">see source code</a><br>
-            <a href="https://google-news-johnnyko.herokuapp.com/" target="_blank">see source code</a><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/NewsApp2.png" />
             This is a webpage that allows you to search for news information using the Google News API and the results will be displayed in card format.<br><br>
 
