--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li>Mobile Social Games</li>
             <li>Web Technologies</li>
             <li>Advanced Mobile Devices and Game Consoles</li>
-            <li><User Experience Design and Strategy</li>
+            <li>User Experience Design and Strategy</li>
 
 
 
