--- a/Resume.html
+++ b/Resume.html
@@ -28,7 +28,8 @@
         <p>
             Programming Languages: proficient in Java, JavaScript, experience with Python, C++, C# and C.<br>
             Database Technologies: proficient in SQL, experience with Google BigQuery, CloudDatalab, phpMyAdmin and MongoDB<br>
-            Web Technologies: proficient in HTML, CSS, JavaScript, experience with Android Studio, React, Bootstrap, Node.js, JSON, Ajax, AWS and GCP.<br><br>
+            Web Technologies: proficient in HTML, CSS, JavaScript, experience with Android Studio, React, Bootstrap, Node.js, JSON, Ajax, AWS and GCP.<br>
+            Tools: experience with Sketch, Unity and Github <br><br>
             
             Prior to USC, I was an experienced Product Manager with a demonstrated history of working in the electrical and electronic manufacturing industry. Skilled in Computer Science, IT Strategy, Market Research, Management, and Business Development. Strong business development professional graduated from University of Illinois at Urbana-Champaign.<br><br>
             Please feel free to download my resume!
