--- a/project.html
+++ b/project.html
@@ -26,6 +26,16 @@
             <a href="Contact.html">Contact</a>
         </div>
         
+        <h2>User Experience Design and Strategy: Fall 2020 </h2>
+        <p>
+            This is a café table booking app startup pitch. Topics include competitive analysis, identification of marketplace opportunities, value innovation, rapid prototyping (in Sketch), customer discovery and designing for conversion using metrics. <br><br>
+            <a href="https://csci526-triplea.netlify.app/" target="_blank">see startup pitch</a><br>
+            <a href="https://youtu.be/-FgaVBdATOo" target="_blank">see prototype demo</a><br>
+            <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity/blob/master/Elementally%20GDD.pdf" target="_blank">see landing page</a><br>
+            <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity" target="_blank">see Facebook page</a><br>
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/screenshot_mobile.jpg" /><br>
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshotsscreenshot_landingPage.png" />
+        </p>
         <h2>Mobile Game Development: Summer 2020 </h2>
         <p>
             A capstone project of CSCI-526 Advanced Mobile Devices and Game Consoles from University of Southern California Computer Science course.
