--- a/project.html
+++ b/project.html
@@ -29,10 +29,10 @@
         <h2>User Experience Design and Strategy: Fall 2020 </h2>
         <p>
             This is a café table booking app startup pitch. Topics include competitive analysis, identification of marketplace opportunities, value innovation, rapid prototyping (in Sketch), customer discovery and designing for conversion using metrics. <br><br>
-            <a href="https://csci526-triplea.netlify.app/" target="_blank">see startup pitch</a><br>
-            <a href="https://youtu.be/-FgaVBdATOo" target="_blank">see prototype demo</a><br>
-            <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity/blob/master/Elementally%20GDD.pdf" target="_blank">see landing page</a><br>
-            <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity" target="_blank">see Facebook page</a><br>
+            <a href="https://github.com/johnnyko28/UX-Design-GrabCoffee-Sketch/blob/main/ChinchouKo_GrabCoffee_StartUpPitch.pdf" target="_blank">see startup pitch</a><br>
+            <a href="https://www.sketch.com/s/488b969f-b7e3-4d17-9ef9-704d975f8892/a/AA7vLR/play" target="_blank">see prototype demo</a><br>
+            <a href="http://unbouncepages.com/grabcoffee_coming_soon/" target="_blank">see landing page</a><br>
+            <a href="https://www.facebook.com/grabcoffees" target="_blank">see Facebook page</a><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/screenshot_mobile.jpg" /><br>
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/screenshot_landingPage.png" />
         </p>
