--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
             <a href="About.html">About</a>
             <a href="Resume.html">Resume</a>
             <a href="project.html">Project</a>
-            <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
+            <!--<a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>-->
             <a href="Contact.html">Contact</a>
         </div>
   
         <h2>Software Engineer</h2>
         <p>
-            My name is Johnny Ko, currently a graduate student in computer science at University of Southern California. I also have a Master in Technology Management from University of Illinois at Urbana-Champaign - College of Business. I was a product manager in the electronic industry, experience including sales, trading, marketing, procurement, logistic and manufacturing.
-        </p>
+            My name is Johnny Ko, I am a software engineer. I graduated with a master's degree in computer science from University of Southern California(USC)
+            Prior to USC, I was a product manager in the electronic industry, with experience including sales, trading, marketing, procurement, logistic and manufacturing.
+            I also have a master's degree in Technology Management from University of Illinois at Urbana-Champaign - College of Business.
         
         <img alt="A screenshot showing CSS Quick Edit" src="screenshots/coffee.jpeg" />
     
@@ -41,7 +42,6 @@
         </p>
 -->
         <p>
-            Besides my business background, I have completed the following computer science courses:
         </p>
         <h4>Oregon State University</h4>
         <ul>
