--- a/Resume.html
+++ b/Resume.html
@@ -38,7 +38,7 @@
         <button class="btn"></i> Download</button>
         </a>
         <div style="border:1px white;max-width:95%;height:400px;overflow:auto">
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/resume_202101.jpg" />
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/resume_202101.jpeg" />
         </div><br>
         
         
