--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
             <a href="About.html">About</a>
             <a href="Resume.html">Resume</a>
             <a href="project.html">Project</a>
-            <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
+            <!--<a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>-->
             <a href="Contact.html">Contact</a>
         </div>
         
@@ -40,7 +40,6 @@
         <p>
             A capstone project of CSCI-526 Advanced Mobile Devices and Game Consoles from University of Southern California Computer Science course.
             Developed a 3D mobile puzzle game with a 9-person virtual team, the game was made with C# and Unity. <br><br>
-            <a href="https://csci526-triplea.netlify.app/" target="_blank">play this game on WebGL</a><br>
             <a href="https://youtu.be/-FgaVBdATOo" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity/blob/master/Elementally%20GDD.pdf" target="_blank">see design document</a><br>
             <a href="https://github.com/johnnyko28/MobileGame-Elementally-Unity" target="_blank">see source code</a><br>
@@ -99,7 +98,6 @@
         <p>
             The final project of CSCI-599 Mobile Social Game from University of Southern California Computer Science course.
             I was the project manager of a seven-person team, the game was made with C# and Unity. This game project includes not only implementation but also product management, market research and game data analysis. <br><br>
-            <a href="http://kochinch.freevar.com/StrangeRoad.html" target="_blank">play this game on WebGL</a><br>
             <a href="https://youtu.be/WllFxTex6Ek" target="_blank">see project demo on Youtube</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad/blob/master/Design%20Document.pdf" target="_blank">see design document</a><br>
             <a href="https://github.com/johnnyko28/StrangeRoad" target="_blank">see source code</a><br>
