--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
             <a href="About.html">About</a>
             <a href="Resume.html">Resume</a>
             <a href="project.html">Project</a>
-            <a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>
+            <!--<a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>-->
             <a href="Contact.html">Contact</a>
         </div>
   
