--- a/project.html
+++ b/project.html
@@ -29,8 +29,8 @@
         <p>
             I used React, Typescript, Node.js, Express.js, and MongoDB to develop a new full-stack map picker web application that allows users to pick a location to get latitude and longitude, integrate with RESTful APIs, then save them into the database. <br><br>
             <a href="https://github.com/johnnyko28/WebApp-MapPicker-React_TypeScript_Nodejs_MongoDB" target="_blank">see source code</a><br>
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/App.jpg" /><br>
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/API.jpg" /><br>
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/App.jpg" />
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/API.jpg" />
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/DB.jpg" />
         </p>
         <h2>User Experience Design and Strategy: Fall 2020 </h2>
@@ -40,7 +40,7 @@
             <a href="https://www.sketch.com/s/488b969f-b7e3-4d17-9ef9-704d975f8892/a/AA7vLR/play" target="_blank">see prototype demo</a><br>
             <a href="http://unbouncepages.com/grabcoffee_coming_soon/" target="_blank">see landing page</a><br>
             <a href="https://www.facebook.com/grabcoffees" target="_blank">see Facebook page</a><br>
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/screenshot_mobile.jpg" /><br>
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/screenshot_mobile.jpg" />
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/screenshot_landingPage.png" />
         </p>
         <h2>Mobile Game Development: Summer 2020 </h2>
