--- a/project.html
+++ b/project.html
@@ -25,6 +25,20 @@
             <!--<a href="http://medium.com/@johnnyko28" target="_blank">Blog</a>-->
             <a href="Contact.html">Contact</a>
         </div>
+        <h2>Full-Stack Application: Trending Products, Spring 2021 </h2>
+        <p>
+            Assume the customers around a campus order 5000 orders a day from 50 local restaurants. Each order contains one or multiple products. For eg, 2 burritos, a soda, and a side of chips. To provide a better user experience for users to choose their meals, I designed a full stack application which returns an infinite-scrolling list of trending products to the user. The definition of trending product here is purchased at least once in last 48 hours. This full-Stack solution including web server, backend persistence and associated code. <br><br>
+            The sample data I used is here <a href="https://docs.google.com/spreadsheets/d/1djJkH4IBVvqpRqLA-YkA36guOtpZw_3CIsPLpulbIJk/edit#gid=280279953" target="_blank">Sample Orders</a><br>
+            Frontend: React
+Backend: Node.js, Express.js
+Database: MongoDB
+
+I imported the sample data into MongoDB and used Node.js(Express.js, Mongoose) to query the data, and generated a RESTful API to display the data. Next, I developed a frontend using React (React-bootstrap) to fetch the data and created this full-stack application.
+            <a href="https://github.com/johnnyko28/WebApp-TrendingProducts-React_Nodejs_MongoDB" target="_blank">see source code</a><br>
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/App1.jpg" />
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/API1.jpg" />
+            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/DB1.jpg" />
+        </p>
         <h2>Full-Stack Application: React Leaflet Map Picker, Spring 2021 </h2>
         <p>
             I used React, Typescript, Node.js, Express.js, and MongoDB to develop a new full-stack map picker web application that allows users to pick a location to get latitude and longitude, integrate with RESTful APIs, then save them into the database. <br><br>
