--- a/Resume.html
+++ b/Resume.html
@@ -28,13 +28,13 @@
         <p>
             <b>Programming Languages</b>: proficient in Java, JavaScript, experience with Python, C++, C# and C.<br>
             <b>Database Technologies</b>: proficient in SQL, experience with MongoDB, Google BigQuery and CloudDatalab<br>
-            <b>Web Technologies</b>: proficient in HTML, CSS, JavaScript, React, Bootstrap, Typescript, Node.js, experience with RESTful APIs, JSON, Ajax, Android Studio, AWS, and GCP.<br>
+            <b>Web Technologies</b>: proficient in HTML, CSS, JavaScript, React, Vue.js, Bootstrap, Typescript, Node.js, RESTful APIs, JSON, Ajax, experience with  Android Studio, AWS, and GCP.<br>
             <b>Tools</b>: experience with GitHub, Sketch, and Unity <br><br>
             
             Please feel free to download my resume!
         </p>
   
-        <a href="Chin-Chou_Ko_resume_202105SF.pdf" download>
+        <a href="Chin-Chou_Ko_resume_202108SF.pdf" download>
         <button class="btn"></i> Download</button>
         </a>
         <div style="border:1px white;max-width:95%;height:400px;overflow:auto">
