--- a/Resume.html
+++ b/Resume.html
@@ -34,7 +34,7 @@
             Please feel free to download my resume!
         </p>
   
-        <a href="Chin-Chou_Ko_resume_202108SF.pdf" download>
+        <a href="resume.pdf" download>
         <button class="btn"></i> Download</button>
         </a>
         <div style="border:1px white;max-width:95%;height:400px;overflow:auto">
