--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
         <h2>Software Engineer</h2>
         <p>
-            My name is Johnny Ko, I am a software engineer. I graduated with a master's degree in computer science from University of Southern California(USC).
+            My name is Johnny Ko, I am a frontend software engineer. I graduated with a master's degree in computer science from University of Southern California(USC).
             Prior to USC, I was a product manager in the electronic industry, with experience including sales, trading, marketing, procurement, logistic and manufacturing.
             I also have a master's degree in Technology Management from University of Illinois at Urbana-Champaign - College of Business.
         
