--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   
         <h2>Software Engineer</h2>
         <p>
-            My name is Johnny Ko, I am a frontend software engineer. I graduated with a master's degree in computer science from University of Southern California(USC).
-            Prior to USC, I was a product manager in the electronic industry, with experience including sales, trading, marketing, procurement, logistic and manufacturing.
+            My name is Johnny Ko, I am a frontend software engineer with three years of experience. Currently, I worked for a supply chain management software company for two years. I graduated with a master's degree in computer science from University of Southern California(USC).
+            Before USC, I was a product manager in the electronic industry, with experience in sales, trading, marketing, procurement, logistics, and manufacturing.
             I also have a master's degree in Technology Management from University of Illinois at Urbana-Champaign - College of Business.
         
         <img alt="A screenshot showing CSS Quick Edit" src="screenshots/coffee.jpeg" />
