--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
         <h2>Software Engineer</h2>
         <p>
-            My name is Johnny Ko, I am a frontend software engineer with three years of experience. Currently, I worked for a supply chain management software company for two years. I graduated with a master's degree in computer science from University of Southern California(USC).
+            I am Johnny Ko, a frontend software engineer with three years of experience. Currently, I worked for a supply chain management software company for two years. I graduated with a master's degree in computer science from University of Southern California(USC).
             Before USC, I was a product manager in the electronic industry, with experience in sales, trading, marketing, procurement, logistics, and manufacturing.
             I also have a master's degree in Technology Management from University of Illinois at Urbana-Champaign - College of Business.
         
